data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1229.wast
;; 10. **Uninitialized Indices:**     - Description: Implement a `br_table` where some indices are uninitialized or set to an invalid number.     - Spot how the implementation interprets and handles uninitialized indices, ensuring no undefined behavior.     - Specific Constraint: Ensure the implementation does not crash and handles invalid or uninitialized indices gracefully.

(assert_invalid
  (module (func
    (block (result i32)
      (i32.const 0)
      (br_table 0 2 (i32.const 2))
    )
  ))
  "uninitialized index"
)